--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,11 @@
             <version>3.3.1</version>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>nz.ac.waikato.cms.weka</groupId>
             <artifactId>weka-stable</artifactId>
             <version>3.8.5</version>
-        </dependency>
+        </dependency>-->
 
     </dependencies>
 
